--- a/models/INCsummarizer.ipynb
+++ b/models/INCsummarizer.ipynb
@@ -304,7 +304,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from data.data_utils import contractions        # for contractions (link will be added here)"
+    "reviews.to_csv('data/general_data/amazon_reviews/reviews.txt', sep='\\t', index=False,header=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "attempted relative import with no known parent package",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata_utils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m contractions        \u001b[38;5;66;03m# for contractions (link will be added here)\u001b[39;00m\n",
+      "\u001b[1;31mImportError\u001b[0m: attempted relative import with no known parent package"
+     ]
+    }
+   ],
+   "source": [
+    "from models.data.data_utils import contractions        # for contractions (link will be added here)"
    ]
   },
   {
@@ -1193,7 +1214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
